--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "express": "^4.18.3",
     "express-openid-connect": "^2.17.1",
     "monday-ui-react-core": "^2.93.0",
