--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.3",
     "express-openid-connect": "^2.17.1",
     "monday-ui-react-core": "^2.93.0",
+    "nodemailer": "^6.9.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
