--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "date-fns": "^3.3.1",
     "express": "^4.18.3",
     "express-openid-connect": "^2.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "monday-ui-react-core": "^2.93.0",
     "nodemailer": "^6.9.11",
     "react": "^18.2.0",
