--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 MONGO_URL = mongodb+srv://valakijay55:erbT3DbxNyWnZSCd@cluster0.ucxehbg.mongodb.net/
 PORT = 4004
 CLIENT_URL = http://localhost:3000
-JWT_SECRET = erbT3DbxNyWnZSCd
+JWT_SECRET=mysecretkey123
+
