add new feature of auditor dashboard , create project

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
 MONGO_URL = mongodb+srv://valakijay55:erbT3DbxNyWnZSCd@cluster0.ucxehbg.mongodb.net/
 PORT = 4004
 CLIENT_URL = http://localhost:3000
+EMAIL_USER = senderfromern@gmail.com
+EMAIL_PASS = vgghkoksogbhhtve
 JWT_SECRET=mysecretkey123
 
