--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,16 @@
     "date-fns": "^3.3.1",
     "express": "^4.18.3",
     "express-openid-connect": "^2.17.1",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "monday-ui-react-core": "^2.93.0",
+    "monday-ui-react-core": "^2.94.0",
     "nodemailer": "^6.9.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
