--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "nodemon": "^3.1.0"
+    "nodemailer": "^6.9.12",
+    "nodemon": "^3.1.0",
+    "puppeteer": "^22.4.1"
   }
 }
