--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.15.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^3.3.1",
     "express": "^4.18.3",
@@ -20,6 +21,7 @@
     "monday-ui-react-core": "^2.94.0",
     "nodemailer": "^6.9.11",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
