--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MONGO_URL = mongodb+srv://valakijay55:erbT3DbxNyWnZSCd@cluster0.ucxehbg.mongodb.net/
-PORT = 4004
-CLIENT_URL = http://localhost:3000
+PORT = 3000
+CLIENT_URL = https://4.240.109.61
 EMAIL_USER = senderfromern@gmail.com
 EMAIL_PASS = vgghkoksogbhhtve
 JWT_SECRET=mysecretkey123
